Update AESEncryptAlgorithm.java (#10830)
* Update AESEncryptAlgorithm.java

improvement base64 encode decode performance. Totally increase almost over 200%

add trycatch